style: 💄 Changed select currency icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
         class="text-basen flex flex-col gap-2 rounded-lg bg-neutral-800 px-4 py-2 shadow-md shadow-white/20">
         <div class="flex items-center gap-2">
           <mat-icon style="font-size: 20px; width: 20px; height: 20px">
-            attach_money
+            currency_exchange
           </mat-icon>
           Select a currency:
         </div>
