--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,33 +78,35 @@
           Create a new trip
         </a>
       </li>
-      <div
-        class="text-basen flex flex-col gap-2 rounded-lg bg-neutral-800 px-4 py-2 shadow-md shadow-white/20">
-        <div class="flex items-center gap-2">
-          <mat-icon style="font-size: 20px; width: 20px; height: 20px">
-            currency_exchange
-          </mat-icon>
-          Select a currency:
-        </div>
-        <div class="flex flex-row flex-wrap gap-2 text-sm">
-          @for (cur of currencies; track cur.value) {
-            @if (cur.value === baseCurrency()) {
-              <button
-                type="button"
-                class="h-fit w-fit rounded-full border border-white bg-blue-700/30 px-4 py-1 text-white">
-                {{ cur.value }}
-              </button>
-            } @else {
-              <button
-                type="button"
-                class="h-fit w-fit rounded-full bg-blue-700/30 px-4 py-1 text-white"
-                (click)="setBaseCurrency(cur.value)">
-                {{ cur.value }}
-              </button>
+      @if (isLoggedIn$ | async) {
+        <div
+          class="text-basen flex flex-col gap-2 rounded-lg bg-neutral-800 px-4 py-2 shadow-md shadow-white/20">
+          <div class="flex items-center gap-2">
+            <mat-icon style="font-size: 20px; width: 20px; height: 20px">
+              currency_exchange
+            </mat-icon>
+            Select a currency:
+          </div>
+          <div class="flex flex-row flex-wrap gap-2 text-sm">
+            @for (cur of currencies; track cur.value) {
+              @if (cur.value === baseCurrency()) {
+                <button
+                  type="button"
+                  class="h-fit w-fit rounded-full border border-white bg-blue-700/30 px-4 py-1 text-white">
+                  {{ cur.value }}
+                </button>
+              } @else {
+                <button
+                  type="button"
+                  class="h-fit w-fit rounded-full bg-blue-700/30 px-4 py-1 text-white"
+                  (click)="setBaseCurrency(cur.value)">
+                  {{ cur.value }}
+                </button>
+              }
             }
-          }
+          </div>
         </div>
-      </div>
+      }
     </ul>
   </div>
 </div>
