fix: 💄 Fixed requested changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="drawer">
   <input id="my-drawer" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content">
-    <p>
+    <nav>
       <mat-toolbar class="flex justify-between shadow-md shadow-white/20">
         <div class="flex items-center">
           <label
@@ -43,7 +43,7 @@
           }
         </div>
       </mat-toolbar>
-    </p>
+    </nav>
     <router-outlet />
   </div>
   <div class="drawer-side z-30">
