--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -12,9 +12,9 @@
       <div class="flex items-center justify-between">
         <h1 class="flex items-center gap-2 text-2xl font-bold text-white">
           {{ activity()?.title }}
-          @if (activity()?.tag) {
+          @if (activity()?.tag; as tag) {
             <div class="badge border-0 bg-blue-700/40 p-3 text-white">
-              {{ activity()?.tag }}
+              {{ tag }}
             </div>
           }
         </h1>
