--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -167,7 +167,8 @@
         <h3 class="text-2xl font-bold">Hold on!</h3>
         <p class="py-4">
           Are you sure you would like to delete
-          {{ activityToDelete()?.title }} from {{ tripToUpdate()?.title }}?
+          {{ activityToDelete()?.title ?? 'this activity' }} from
+          {{ tripToUpdate()?.title ?? 'this trip' }}?
         </p>
         <div class="modal-action">
           <div class="flex gap-2">
@@ -194,7 +195,7 @@
             {{ tripToUpdate()?.title ?? 'this trip' }}?
           </p>
           <p class="pt-2">
-            You will be deleting the associated itineraries as well.
+            You will be deleting the associated itinerary as well.
           </p>
         </div>
         <div class="modal-action">
