refactor: :recycle: Refactored asstets and fix corresponding errors. Implemented fallback for exchange rates api failures.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -90,7 +90,7 @@
       <div
         class="absolute top-0 z-[-1] flex h-screen w-screen flex-col items-center justify-center overflow-x-hidden">
         <img
-          ngSrc="/assets/tripNotFound.svg"
+          ngSrc="/assets/img/tripNotFound.svg"
           alt="No trips found"
           width="128"
           height="128"
