--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,6 +1,6 @@
 <div class="mt-20 flex w-full items-center justify-center text-white">
   <div class="m-4 flex flex-col items-center gap-4 md:w-1/2">
-    <img src="assets/404.svg" alt="404 image" />
+    <img src="assets/img/404.svg" alt="404 image" />
     <h2 class="text-center text-3xl font-bold text-blue-400">
       The page you are looking for does not exist.
     </h2>
