--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="h-calc-screen w-full">
   <div
-    class="relative h-1/2 w-full bg-[url('assets/boat-background.jpg')] bg-cover bg-center bg-no-repeat">
+    class="relative h-1/2 w-full bg-[url('assets/img/boat-background.jpg')] bg-cover bg-center bg-no-repeat">
     <div
       class="absolute top-0 z-10 h-full w-full bg-gradient-to-t from-slate-1000 to-slate-1000/20"></div>
     <div class="absolute top-2/3 z-20 flex justify-center">
