--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -1,4 +1,4 @@
-@if ((loading$ | async) ?? false) {
+@if (loading()) {
   <div class="flex h-screen w-full flex-col gap-4 p-6 md:mx-auto md:max-w-xl">
     <div class="skeleton h-10 w-1/2 rounded-lg"></div>
     <div class="skeleton h-80 w-full rounded-lg"></div>
@@ -9,7 +9,7 @@
       class="skeleton h-36 w-full rounded-lg shadow-md shadow-white/20"></div>
   </div>
 } @else {
-  @if (trip$ | async; as trip) {
+  @if (trip(); as trip) {
     <div class="flex flex-col gap-4 p-6 text-white md:mx-auto md:max-w-xl">
       <div class="flex items-center justify-between">
         <h1 class="text-2xl font-bold text-white">
@@ -30,99 +30,18 @@
         </div>
       </div>
       <div class="flex items-end">
-        @if (baseCurrency$ | async; as baseCurrency) {
-          <p class="h-fit w-fit text-xl">
-            {{ trip.totalCost | currency: baseCurrency : 'symbol-narrow' }}
-          </p>
-        }
+        <p class="h-fit w-fit text-xl">
+          {{ trip.totalCost | currency: baseCurrency() : 'symbol-narrow' }}
+        </p>
       </div>
-      <nz-calendar [nzFullscreen]="false" [nzValue]="trip.startDate">
-        <ul *nzDateFullCell="let date" class="max-h-14 overflow-hidden">
-          @if (date && trip.startDate && trip.endDate) {
-            @if (
-              getDateWithoutTime(date).valueOf() >=
-                getDateWithoutTime(trip.startDate).valueOf() &&
-              getDateWithoutTime(date).valueOf() <=
-                getDateWithoutTime(trip.endDate).valueOf()
-            ) {
-              @if (
-                getDateWithoutTime(date).valueOf() ===
-                  getDateWithoutTime(trip.startDate).valueOf() &&
-                getDateWithoutTime(date).valueOf() ===
-                  getDateWithoutTime(trip.endDate).valueOf()
-              ) {
-                @if (date | hasActivity: trip.itinerary ?? []) {
-                  <li
-                    class="tripStartAndEndDate rounded-full bg-green-1000 text-black">
-                    {{ date.getDate() }}
-                  </li>
-                } @else {
-                  <li class="tripStartAndEndDate">
-                    {{ date.getDate() }}
-                  </li>
-                }
-              } @else if (
-                getDateWithoutTime(date).valueOf() ===
-                getDateWithoutTime(trip.startDate).valueOf()
-              ) {
-                @if (date | hasActivity: trip.itinerary ?? []) {
-                  <li
-                    class="tripStartDate rounded-full bg-green-1000 text-black">
-                    {{ date.getDate() }}
-                  </li>
-                } @else {
-                  <li class="tripStartDate">
-                    {{ date.getDate() }}
-                  </li>
-                }
-              } @else if (
-                getDateWithoutTime(date).valueOf() ===
-                getDateWithoutTime(trip.endDate).valueOf()
-              ) {
-                @if (date | hasActivity: trip.itinerary ?? []) {
-                  <li class="tripEndDate rounded-full bg-green-1000 text-black">
-                    {{ date.getDate() }}
-                  </li>
-                } @else {
-                  <li class="tripEndDate">
-                    {{ date.getDate() }}
-                  </li>
-                }
-              } @else {
-                @if (date | hasActivity: trip.itinerary ?? []) {
-                  <li class="tripDate rounded-full bg-green-1000 text-black">
-                    {{ date.getDate() }}
-                  </li>
-                } @else {
-                  <li class="tripDate">
-                    {{ date.getDate() }}
-                  </li>
-                }
-              }
-            } @else {
-              <li class="rounded-full">
-                {{ date.getDate() }}
-              </li>
-            }
-          }
-        </ul>
-      </nz-calendar>
+      <app-calendar></app-calendar>
       <div class="flex w-full md:justify-between">
         <div class="flex w-full flex-col items-start gap-1 text-nowrap">
           <p class="flex items-center gap-2">
-            <nz-steps [nzCurrent]="3" nzDirection="vertical">
-              <nz-step
-                [nzTitle]="
-                  (trip.startDate | date) + ' - ' + (trip.endDate | date)
-                "
-                nzIcon="schedule"></nz-step>
-              <nz-step
-                [nzTitle]="
-                  trip.duration + ' ' + (trip.duration === 1 ? 'day' : 'days')
-                "
-                nzIcon="field-time"
-                class="durationStep"></nz-step>
-            </nz-steps>
+            <app-steps
+              [starDate]="trip.startDate"
+              [endDate]="trip.endDate"
+              [duration]="trip.duration"></app-steps>
           </p>
         </div>
       </div>
