--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -25,7 +25,7 @@
       Create a new trip
     </a>
   </li>
-  @if (isLoggedIn$ | async) {
+  @if (isLoggedIn()) {
     <div
       class="text-basen flex flex-col gap-2 rounded-lg bg-neutral-800 px-4 py-2 shadow-md shadow-white/20">
       <div class="flex items-center gap-2">
