--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -1,30 +1,30 @@
-<ul
+<div
   class="menu flex min-h-screen w-72 flex-col gap-4 bg-slate-1000 p-4 text-lg text-white">
-  <li>
-    <a
-      type="button"
-      class="btn btn-ghost flex justify-start gap-0 px-4 text-xl text-white md:px-4 md:text-2xl"
-      routerLink="/home">
-      Bon
-      <span class="text-blue-400">Voyage</span>
-    </a>
-  </li>
-  <li>
-    <a type="button" routerLink="/home">
-      <mat-icon style="font-size: 20px; width: 20px; height: 20px">
-        home
-      </mat-icon>
-      Home
-    </a>
-  </li>
-  <li>
-    <a type="button" routerLink="/new-trip">
-      <mat-icon style="font-size: 20px; width: 20px; height: 20px">
-        add
-      </mat-icon>
-      Create a new trip
-    </a>
-  </li>
+  <a
+    type="button"
+    class="btn btn-ghost flex justify-start gap-0 px-4 text-xl text-white md:text-2xl"
+    routerLink="/home"
+    aria-label="Go Home">
+    Bon
+    <span class="text-blue-400">Voyage</span>
+  </a>
+  <a
+    type="button"
+    routerLink="/home"
+    class="flex items-center gap-2 px-4 py-2 transition-all ease-in-out hover:scale-105"
+    aria-label="Go Home">
+    <mat-icon style="font-size: 20px; width: 20px; height: 20px">home</mat-icon>
+    Home
+  </a>
+  <a
+    type="button"
+    routerLink="/new-trip"
+    class="flex items-center gap-2 px-4 py-2 transition-all ease-in-out hover:scale-105"
+    aria-label="Create new trp">
+    <mat-icon style="font-size: 20px; width: 20px; height: 20px">add</mat-icon>
+    Create a new trip
+  </a>
+
   @if (isLoggedIn()) {
     <div
       class="text-basen flex flex-col gap-2 rounded-lg bg-neutral-800 px-4 py-2 shadow-md shadow-white/20">
@@ -39,14 +39,16 @@
           @if (cur.value === baseCurrency()) {
             <button
               type="button"
-              class="h-fit w-fit rounded-full border border-white bg-blue-700/30 px-4 py-1 text-white">
+              class="h-fit w-fit rounded-full border border-white bg-blue-700/30 px-4 py-1 text-white"
+              aria-label="Change currency">
               {{ cur.value }}
             </button>
           } @else {
             <button
               type="button"
               class="h-fit w-fit rounded-full bg-blue-700/30 px-4 py-1 text-white"
-              (click)="setBaseCurrency(cur.value)">
+              (click)="setBaseCurrency(cur.value)"
+              aria-label="Change currency">
               {{ cur.value }}
             </button>
           }
@@ -54,4 +56,4 @@
       </div>
     </div>
   }
-</ul>
+</div>
