--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -7,7 +7,11 @@
     <p class="text-center text-2xl">
       Please check the URL or tap the button below to go back to the homepage.
     </p>
-    <a type="button" class="btn w-fit border-0 bg-blue-400" routerLink="/home">
+    <a
+      type="button"
+      class="btn w-fit border-0 bg-blue-400"
+      routerLink="/home"
+      aria-label="Go Home">
       Home
     </a>
   </div>
