--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -22,7 +22,8 @@
           <a
             type="button"
             class="flex items-center transition-all ease-in-out hover:scale-110"
-            [routerLink]="['/edit', tripId()]">
+            [routerLink]="['/edit', tripId()]"
+            aria-label="Edit trip">
             <mat-icon>edit</mat-icon>
           </a>
           <button
@@ -68,14 +69,15 @@
         <a
           type="button"
           class="btn border-0 bg-green-1000"
-          [routerLink]="['/trip', tripId()]">
+          [routerLink]="['/trip', tripId()]"
+          aria-label="Return to trip">
           Return
         </a>
       </div>
     </div>
     <dialog #confirmModal class="modal">
       <div class="modal-box">
-        <h3 class="text-2xl font-bold">Hold on!</h3>
+        <p class="text-2xl font-bold">Hold on!</p>
         <p class="py-4">
           Are you sure you would like to delete
           {{ activity.title }} from {{ tripToUpdate()?.title ?? 'this trip' }}?
@@ -84,12 +86,14 @@
           <div class="flex gap-2">
             <button
               class="btn border-0 bg-gray-700 text-white"
-              (click)="closeModal()">
+              (click)="closeModal()"
+              aria-label="Cancel delete">
               Cancel
             </button>
             <button
               class="btn border-0 bg-red-700 text-white"
-              (click)="deleteActivity()">
+              (click)="deleteActivity()"
+              aria-label="Delete activity">
               Delete
             </button>
           </div>
@@ -101,7 +105,11 @@
       <p class="text-wrap text-center">
         Oops! Something went wrong. Please return to the trip.
       </p>
-      <a type="button" class="btn btn-link" [routerLink]="['/trip', tripId()]">
+      <a
+        type="button"
+        class="btn btn-link"
+        [routerLink]="['/trip', tripId()]"
+        aria-label="Return to trip">
         Return
       </a>
     </div>
