--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -20,7 +20,8 @@
         <a
           type="button"
           routerLink="/home"
-          class="btn mt-2 w-fit self-center border-0 bg-blue-400 md:self-start">
+          class="btn mt-2 w-fit self-center border-0 bg-blue-400 md:self-start"
+          aria-label="Go Home">
           Get started
           <mat-icon class="flex items-center text-[1.2rem]">hiking</mat-icon>
         </a>
