--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,10 @@
         <h2 class="self-start text-xl font-bold text-white">
           Log in to BonVoyage
         </h2>
-        <button class="btn w-full rounded-full" (click)="signInWithGoogle()">
+        <button
+          class="btn w-full rounded-full"
+          (click)="signInWithGoogle()"
+          aria-label="Log in with Google">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="18"
@@ -74,7 +77,8 @@
           <button
             type="submit"
             [disabled]="!loginForm.valid"
-            class="btn my-6 rounded-full">
+            class="btn my-6 rounded-full"
+            aria-label="Submit log in form">
             Log In
           </button>
         </form>
@@ -83,7 +87,8 @@
           <a
             type="button"
             class="text-blue-400 underline hover:scale-105"
-            routerLink="/sign-up">
+            routerLink="/sign-up"
+            aria-label="Sign up">
             Sign Up
           </a>
         </p>
