--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -9,7 +9,8 @@
       <a
         type="button"
         class="btn btn-ghost gap-0 p-0 text-xl text-white md:px-4 md:text-2xl"
-        routerLink="/home">
+        routerLink="/home"
+        aria-label="Go Home">
         Bon
         <span class="text-blue-400">Voyage</span>
       </a>
@@ -26,14 +27,14 @@
         <a
           type="button"
           class="btn btn-ghost h-8 min-h-8 text-sm text-blue-400"
-          aria-label="Log in button"
+          aria-label="Log in"
           routerLink="/log-in">
           Log In
         </a>
         <a
           type="button"
           class="btn h-8 min-h-8 border-0 bg-blue-400"
-          aria-label="Sign up button"
+          aria-label="Sign up"
           routerLink="/sign-up">
           Sign Up
         </a>
